.ks/fides-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: fides-service
  namespace: dpcp
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: fides
