.ks/fides-ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fides-ingress
  namespace: dpcp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: ethyca-dev-ingress-security-group
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:658462651023:certificate/6b6a22f6-a832-46fb-aae4-7c97eb758e27
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:658462651023:certificate/a1810a4e-ed72-4286-96c7-6340a78c87ab
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: fides
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: fides-service
              servicePort: 80
